--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -11,17 +11,45 @@
 	<link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
+ 
+	<div class="background"></div>
+  
+
+	<div class="popup">
+		<h2>Titre pop up</h2>
+		<div class="miniatures">
+		  <img src="" class="thumbnail">
+		  <img src="" class="thumbnail">
+		  <img src="" class="thumbnail">
+		  <img src="" class="thumbnail">
+		  <img src="" class="thumbnail">
+		  <img src="" class="thumbnail">
+		  <img src="" class="thumbnail">
+		  <img src="" class="thumbnail">
+		  <img src="" class="thumbnail">
+		  <img src="" class="thumbnail">
+		  <img src="" class="thumbnail">
+		  <img src="" class="thumbnail">
+
+		</div>
+		<!-- Barre séparatrice -->
+		<div class="separator"></div>
+		<!-- Bouton Ajouter Photo -->
+		<button class="add-photo-btn">Ajouter Photo</button>
+	  </div>
 <header>
 	<h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
 	<nav>
 		<ul>
 			<li>projets</li>
 			<li>contact</li>
-			<li>login</li>
+			<li><a href="login.html">login</a></li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
 </header>
+
+
 <main>
 	<section id="introduction">
 		<figure>
