Base barre de modif admin

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -10,10 +10,16 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap"
 		rel="stylesheet">
 	<meta name="description" content="">
+	<script src="https://kit.fontawesome.com/58fb884d9c.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="./assets/style.css">
 </head>
 
 <body>
+	<div class="admin-bar">
+		<span class="admin-bar__edit-icon"><i class="fas fa-edit"></i></span>
+		<span class="admin-bar__edit-mode">Mode Édition</span>
+
+	</div>
 
 	<header>
 		<h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
@@ -53,7 +59,7 @@
 				<button class="barre-btn__button">Tous</button>
 			</div>
 
-			
+
 			<div class="gallery">
 				<figure>
 					<img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
