--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -18,139 +18,151 @@
 	<div class="admin-bar">
 		<span class="admin-bar__edit-icon"><i class="fas fa-edit"></i></span>
 		<span class="admin-bar__edit-mode">Mode Édition</span>
-
 	</div>
-
-	<header>
-		<h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
-		<nav>
-			<ul>
-				<li>projets</li>
-				<li>contact</li>
-				<li><a href="login.html">login</a></li>
-				<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
-			</ul>
-		</nav>
-	</header>
-
-
-	<main>
-		<section id="introduction">
-			<figure>
-				<img src="./assets/images/sophie-bluel.png" alt="">
-			</figure>
-			<article>
-				<h2>Designer d'espace</h2>
-				<p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison
-					finale du chantier.</p>
-				<p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les
-					couleurs dans le respect de l’esprit des lieux et le choix adapté des matériaux. Le suivi du
-					chantier sera assuré dans le souci du détail, le respect du planning et du budget.</p>
-				<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG,
-					décorateur(trice)</p>
-			</article>
-		</section>
-		<section id="portfolio">
-			<h2>Mes Projets</h2>
-			<div class="barre-btn">
-				<button class="barre-btn__button barre-btn__button--active">Tous</button>
-				<button class="barre-btn__button">Appartement</button>
-				<button class="barre-btn__button">Tous</button>
-				<button class="barre-btn__button">Tous</button>
+<div class="main-content">
+	
+		<header>
+			<h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
+			<nav>
+				<ul>
+					<li>projets</li>
+					<li>contact</li>
+					<li><a href="login.html">login</a></li>
+					<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
+				</ul>
+			</nav>
+		</header>
+	
+	
+		<main>
+			<section id="introduction">
+				<figure>
+					<img src="./assets/images/sophie-bluel.png" alt="">
+				</figure>
+				<article>
+					<h2>Designer d'espace</h2>
+					<p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison
+						finale du chantier.</p>
+					<p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les
+						couleurs dans le respect de l’esprit des lieux et le choix adapté des matériaux. Le suivi du
+						chantier sera assuré dans le souci du détail, le respect du planning et du budget.</p>
+					<p>En cas de besoin, une équipe pluridisciplinaire peut-être constituée : architecte DPLG,
+						décorateur(trice)</p>
+				</article>
+			</section>
+			<section id="portfolio">
+	
+				<div class="en-tete">
+					<h2>Mes Projets</h2>
+					<div class="note-modifier">
+						<span class="note-modifier__icon">
+							<i class="fas fa-edit"></i>
+						</span>
+						<span class="note-modifier__text">modifier</span>
+					</div>
+				</div>
+	
+	
+				<div class="barre-btn">
+					<button class="barre-btn__button barre-btn__button--active">Tous</button>
+					<button class="barre-btn__button">Appartement</button>
+					<button class="barre-btn__button">Tous</button>
+					<button class="barre-btn__button">Tous</button>
+				</div>
+	
+	
+				<div class="gallery">
+					<figure>
+						<img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
+						<figcaption>Abajour Tahina</figcaption>
+					</figure>
+					<figure>
+						<img src="assets/images/appartement-paris-v.png" alt="Appartement Paris V">
+						<figcaption>Appartement Paris V</figcaption>
+					</figure>
+					<figure>
+						<img src="assets/images/restaurant-sushisen-londres.png" alt="Restaurant Sushisen - Londres">
+						<figcaption>Restaurant Sushisen - Londres</figcaption>
+					</figure>
+					<figure>
+						<img src="assets/images/la-balisiere.png" alt="Villa “La Balisiere” - Port Louis">
+						<figcaption>Villa “La Balisiere” - Port Louis</figcaption>
+					</figure>
+					<figure>
+						<img src="assets/images/structures-thermopolis.png" alt="Structures Thermopolis">
+						<figcaption>Structures Thermopolis</figcaption>
+					</figure>
+					<figure>
+						<img src="assets/images/appartement-paris-x.png" alt="Appartement Paris X">
+						<figcaption>Appartement Paris X</figcaption>
+					</figure>
+					<figure>
+						<img src="assets/images/le-coteau-cassis.png" alt="Pavillon “Le coteau” - Cassis">
+						<figcaption>Pavillon “Le coteau” - Cassis</figcaption>
+					</figure>
+					<figure>
+						<img src="assets/images/villa-ferneze.png" alt="Villa Ferneze - Isola d’Elba">
+						<figcaption>Villa Ferneze - Isola d’Elba</figcaption>
+					</figure>
+					<figure>
+						<img src="assets/images/appartement-paris-xviii.png" alt="Appartement Paris XVIII">
+						<figcaption>Appartement Paris XVIII</figcaption>
+					</figure>
+					<figure>
+						<img src="assets/images/bar-lullaby-paris.png" alt="Bar “Lullaby” - Paris">
+						<figcaption>Bar “Lullaby” - Paris</figcaption>
+					</figure>
+					<figure>
+						<img src="assets/images/hotel-first-arte-new-delhi.png" alt="Hotel First Arte - New Delhi">
+						<figcaption>Hotel First Arte - New Delhi</figcaption>
+					</figure>
+				</div>
+			</section>
+			<section id="contact">
+				<h2>Contact</h2>
+				<p>Vous avez un projet ? Discutons-en !</p>
+				<form action="#" method="post">
+					<label for="name">Nom</label>
+					<input type="text" name="name" id="name">
+					<label for="email">Email</label>
+					<input type="email" name="email" id="email">
+					<label for="message">Message</label>
+					<textarea name="message" id="message" cols="30" rows="10"></textarea>
+					<input type="submit" value="Envoyer">
+				</form>
+			</section>
+		</main>
+	
+		<footer>
+			<nav>
+				<ul>
+					<li>Mentions Légales</li>
+				</ul>
+			</nav>
+		</footer>
+		<div class="modif-window">
+	
+			<div class="background"></div>
+	
+	
+			<div class="popup">
+				<h2>Titre pop up</h2>
+				<div class="miniatures">
+					<img src="" class="thumbnail">
+					<img src="" class="thumbnail">
+					<img src="" class="thumbnail">
+					<img src="" class="thumbnail">
+					<img src="" class="thumbnail">
+	
+	
+				</div>
+				<!-- Barre séparatrice
+				<div class="separator"></div>
+				<!-- Bouton Ajouter Photo -->
+				<button class="add-photo-btn">Ajouter Photo</button>
 			</div>
-
-
-			<div class="gallery">
-				<figure>
-					<img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
-					<figcaption>Abajour Tahina</figcaption>
-				</figure>
-				<figure>
-					<img src="assets/images/appartement-paris-v.png" alt="Appartement Paris V">
-					<figcaption>Appartement Paris V</figcaption>
-				</figure>
-				<figure>
-					<img src="assets/images/restaurant-sushisen-londres.png" alt="Restaurant Sushisen - Londres">
-					<figcaption>Restaurant Sushisen - Londres</figcaption>
-				</figure>
-				<figure>
-					<img src="assets/images/la-balisiere.png" alt="Villa “La Balisiere” - Port Louis">
-					<figcaption>Villa “La Balisiere” - Port Louis</figcaption>
-				</figure>
-				<figure>
-					<img src="assets/images/structures-thermopolis.png" alt="Structures Thermopolis">
-					<figcaption>Structures Thermopolis</figcaption>
-				</figure>
-				<figure>
-					<img src="assets/images/appartement-paris-x.png" alt="Appartement Paris X">
-					<figcaption>Appartement Paris X</figcaption>
-				</figure>
-				<figure>
-					<img src="assets/images/le-coteau-cassis.png" alt="Pavillon “Le coteau” - Cassis">
-					<figcaption>Pavillon “Le coteau” - Cassis</figcaption>
-				</figure>
-				<figure>
-					<img src="assets/images/villa-ferneze.png" alt="Villa Ferneze - Isola d’Elba">
-					<figcaption>Villa Ferneze - Isola d’Elba</figcaption>
-				</figure>
-				<figure>
-					<img src="assets/images/appartement-paris-xviii.png" alt="Appartement Paris XVIII">
-					<figcaption>Appartement Paris XVIII</figcaption>
-				</figure>
-				<figure>
-					<img src="assets/images/bar-lullaby-paris.png" alt="Bar “Lullaby” - Paris">
-					<figcaption>Bar “Lullaby” - Paris</figcaption>
-				</figure>
-				<figure>
-					<img src="assets/images/hotel-first-arte-new-delhi.png" alt="Hotel First Arte - New Delhi">
-					<figcaption>Hotel First Arte - New Delhi</figcaption>
-				</figure>
-			</div>
-		</section>
-		<section id="contact">
-			<h2>Contact</h2>
-			<p>Vous avez un projet ? Discutons-en !</p>
-			<form action="#" method="post">
-				<label for="name">Nom</label>
-				<input type="text" name="name" id="name">
-				<label for="email">Email</label>
-				<input type="email" name="email" id="email">
-				<label for="message">Message</label>
-				<textarea name="message" id="message" cols="30" rows="10"></textarea>
-				<input type="submit" value="Envoyer">
-			</form>
-		</section>
-	</main>
-
-	<footer>
-		<nav>
-			<ul>
-				<li>Mentions Légales</li>
-			</ul>
-		</nav>
-	</footer>
-	<div class="modif-window">
-
-		<div class="background"></div>
-
-
-		<div class="popup">
-			<h2>Titre pop up</h2>
-			<div class="miniatures">
-				<img src="" class="thumbnail">
-				<img src="" class="thumbnail">
-				<img src="" class="thumbnail">
-				<img src="" class="thumbnail">
-				<img src="" class="thumbnail">
-
-
-			</div>
-			<!-- Barre séparatrice
-			<div class="separator"></div>
-			<!-- Bouton Ajouter Photo -->
-			<button class="add-photo-btn">Ajouter Photo</button>
 		</div>
-	</div>
+</div>
 
 </body>
 
