--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -29,33 +29,42 @@
 			<i class="fas fa-arrow-left top-left-arrow"></i>
 
 			<div class="close-icon"><i class="fas fa-times"></i></div>
-			<h2>Galerie photo</h2>
+			<h2 class="popup-title">Titre Popup Ajout Modif</h2>
 
 			<!-- Espace drop in photo -->
 
 			<div class="stand-in-photo">
-				<i class="fas fa-image my-photo-icon"></i>
+				<!-- <i class="fas fa-image my-photo-icon"></i>
+				<button>+ Ajouter Photo</button>
+				<p>jpg, png : 4mo max </p> -->
+
+				<!-- Miniature de l'image ajoutée -->
+  <img src="/FrontEnd/assets/images/appartement-paris-v.png" class="image-thumbnail" >
 
 			</div>
 
-			<label for="title-input" class="input-label">Titre</label>
-			<input type="text" id="title-input" class="input-field">
+			<div class="input-group">
+				<label for="title-input" class="input-label">Titre</label>
+				<input type="text" id="title-input" class="input-field">
+			</div>
 
-			
+			<div class="input-group">
 				<label for="categories-input" class="input-label">Catégories</label>
 				<div class="input-wrapper">
 					<input list="categories" id="categories-input" class="input-field">
-				<i class="fas fa-angle-down"></i></div>
+					<i class="fas fa-angle-down"></i>
+				</div>
 				<datalist id="categories">
-				  <option value="Option 1">
-				  <option value="Option 2">
-				  <option value="Option 3">
-				  <option value="Option 4">
-				  <option value="Option 5">
+					<option value="Option 1">
+					<option value="Option 2">
+					<option value="Option 3">
+					<option value="Option 4">
+					<option value="Option 5">
 				</datalist>
-			  
+			</div>
 
-			<button class="validate-button">Valider</button>
+
+
 
 
 			<!-- Espace gallerie de modifications des mignatures -->
@@ -90,9 +99,13 @@
 			<!-- Barre de séparation -->
 			<div class="separator"></div>
 
+
+
 			<!-- Bouton Ajouter une photo -->
 			<!-- <button class="add-photo-btn">Ajouter Photo</button> -->
 
+			<!-- bouton valider ajout de photo  -->
+			<button class="validate-button ">Valider</button>
 
 		</div>
 	</div>
