--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -12,6 +12,7 @@
 	<meta name="description" content="">
 	<script src="https://kit.fontawesome.com/58fb884d9c.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="./assets/style.css">
+	<script type="module" src="Js/work.js"></script>
 </head>
 
 <body>
@@ -29,7 +30,7 @@
 			<i class="fas fa-arrow-left top-left-arrow"></i> -->
 
 			<!-- <div class="close-icon"><i class="fas fa-times"></i></div>
-			<h2 class="popup-title">Titre Popup Ajout Modif</h2> --> -->
+			<h2 class="popup-title">Titre Popup Ajout Modif</h2> --> 
 
 			<!-- Espace drop in photo -->
 
@@ -165,51 +166,8 @@
 				</div>
 
 
-				<div class="gallery">
-					<figure>
-						<img src="assets/images/abajour-tahina.png" alt="Abajour Tahina">
-						<figcaption>Abajour Tahina</figcaption>
-					</figure>
-					<figure>
-						<img src="assets/images/appartement-paris-v.png" alt="Appartement Paris V">
-						<figcaption>Appartement Paris V</figcaption>
-					</figure>
-					<figure>
-						<img src="assets/images/restaurant-sushisen-londres.png" alt="Restaurant Sushisen - Londres">
-						<figcaption>Restaurant Sushisen - Londres</figcaption>
-					</figure>
-					<figure>
-						<img src="assets/images/la-balisiere.png" alt="Villa “La Balisiere” - Port Louis">
-						<figcaption>Villa “La Balisiere” - Port Louis</figcaption>
-					</figure>
-					<figure>
-						<img src="assets/images/structures-thermopolis.png" alt="Structures Thermopolis">
-						<figcaption>Structures Thermopolis</figcaption>
-					</figure>
-					<figure>
-						<img src="assets/images/appartement-paris-x.png" alt="Appartement Paris X">
-						<figcaption>Appartement Paris X</figcaption>
-					</figure>
-					<figure>
-						<img src="assets/images/le-coteau-cassis.png" alt="Pavillon “Le coteau” - Cassis">
-						<figcaption>Pavillon “Le coteau” - Cassis</figcaption>
-					</figure>
-					<figure>
-						<img src="assets/images/villa-ferneze.png" alt="Villa Ferneze - Isola d’Elba">
-						<figcaption>Villa Ferneze - Isola d’Elba</figcaption>
-					</figure>
-					<figure>
-						<img src="assets/images/appartement-paris-xviii.png" alt="Appartement Paris XVIII">
-						<figcaption>Appartement Paris XVIII</figcaption>
-					</figure>
-					<figure>
-						<img src="assets/images/bar-lullaby-paris.png" alt="Bar “Lullaby” - Paris">
-						<figcaption>Bar “Lullaby” - Paris</figcaption>
-					</figure>
-					<figure>
-						<img src="assets/images/hotel-first-arte-new-delhi.png" alt="Hotel First Arte - New Delhi">
-						<figcaption>Hotel First Arte - New Delhi</figcaption>
-					</figure>
+				<div class="gallery" id="gallery">
+					
 				</div>
 			</section>
 			<section id="contact">
