--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -16,33 +16,32 @@
 </head>
 
 <body>
-	<!-- <div class="admin-bar">
+	<div class="admin-bar">
 		<span class="admin-bar__edit-icon"><i class="fas fa-edit"></i></span>
 		<span class="admin-bar__edit-mode">Mode Édition</span>
-	</div> -->
+	</div>
 
-	<!-- <div class="modif-window">
-		<!-- Background semi-transparent -->
-		<!-- <div class="background"></div> -->
+	 <div class="modif-window">
+		 <!-- Background semi-transparent -->
+		 <div class="background"></div> 
 
 		<!-- Contenu du Popup -->
-		<!-- <div class="popup photo-modifier ">
-			<i class="fas fa-arrow-left top-left-arrow"></i> -->
+		<div class="popup photo-modifier ">
+			<i class="fas fa-arrow-left top-left-arrow"></i> 
 
-			<!-- <div class="close-icon"><i class="fas fa-times"></i></div>
-			<h2 class="popup-title">Titre Popup Ajout Modif</h2> --> 
+		 <div class="close-icon"><i class="fas fa-times"></i></div>
+			<h2 class="popup-title">Titre Popup Ajout Modif</h2>  
 
 			<!-- Espace drop in photo -->
 
-			<!-- <div class="stand-in-photo">
-				<!-- <i class="fas fa-image my-photo-icon"></i>
+			
+<!-- <div class="stand-in-photo">
+				 <i class="fas fa-image my-photo-icon"></i>
 				<button>+ Ajouter Photo</button>
 				<p>jpg, png : 4mo max </p> -->
 
 				<!-- Miniature de l'image ajoutée -->
-  <!-- <img src="/FrontEnd/assets/images/appartement-paris-v.png" class="image-thumbnail" > 
-
-			</div> 
+   <!-- <img src="/FrontEnd/assets/images/appartement-paris-v.png" class="image-thumbnail" > </div>  
 
 			<div class="input-group">
 				<label for="title-input" class="input-label">Titre</label>
@@ -62,7 +61,7 @@
 					<option value="Option 4">
 					<option value="Option 5">
 				</datalist>
-			</div>
+			</div> -->
 
 
 
